# banshee_shop

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
clay_shop/: tree.txt
clay_shop/config/: celery.py  settings.py  urls.py
clay_shop/core/: admin.py  models.py
clay_shop/core/commands/: setup_permissions.py
clay_shop/core/migrations/: 0001_initial.py
clay_shop/core/templates/: home.html
clay_shop/general_templates/: base.html  home.html
clay_shop/general_templates/partials/: cart_item.html  empty_state.html  loading.html  notification.html  product_card.html
clay_shop/general_templates/search/: search_results.html
clay_shop/orders/: admin.py  models.py
clay_shop/orders/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
clay_shop/orders/templates/: cart.html  checkout.html  order_detail.html  order_list.html  wishlist.html
clay_shop/products/: admin.py  models.py  urls.py  views.py
clay_shop/products/forms/: products_form.py
clay_shop/products/migrations/: 0001_initial.py  0002_initial.py
clay_shop/products/services/: analytics_service.py  category_crud.py  products_crud.py  review_crud.py  seller_product_crud.py  service_crud.py
clay_shop/products/templates/: catalog.html  catalog_grid.html  categories.html  category_detail.html  product_detail.html  services.html
clay_shop/seller/: models.py  seller_views.py  urls.py  views.py
clay_shop/users/: admin.py  auth_mixins.py  email_mixins.py  forms.py  middleware.py  mixins.py  models.py  signals.py  tasks.py  urls.py  views.py
(+55 files in other folders)
